api-produto/teste.yaml
NAME: minhaapi
LAST DEPLOYED: Thu Jan 26 15:25:13 2023
NAMESPACE: default
STATUS: pending-install
REVISION: 1
TEST SUITE: None
USER-SUPPLIED VALUES:
{}

COMPUTED VALUES:
api:
  imagem: carlosmendesrv/rotten-potatoes:latest
  serviceType: LoadBalancer
mongodb:
  credentials:
    databaseName: admin
    userName: mongouser
    userPassword: mongopwd
  tag: 4.2.8

HOOKS:
MANIFEST:
---
# Source: api-produto/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: -api-service
spec:
  selector:
    app: -api
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
---
# Source: api-produto/templates/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minhaapi-mongo-service
spec:
  selector:
    app: minhaapi-mongodb
  ports:
  - port: 27017
    targetPort: 27017
---
# Source: api-produto/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minhaapi-api-deployment
spec:
  selector:
    matchLabels:
      app: minhaapi-api
  template: 
    metadata:          
      labels:
        app: minhaapi-api
    spec:            
      containers:
      - name: api
        image: 
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        resources: {}
---
# Source: api-produto/templates/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minhaapi-mongodb-deployment
spec:
  selector:
    matchLabels:
      app: minhaapi-mongodb
  template:
    metadata:     
      labels:
        app: minhaapi-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.2.8
        ports:
        - containerPort: 27017
        resources: {}
NOTES:
Instalado
