api-produto/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            serviceName: minhaapi-api-service
            servicePort: 80
